Added sequential implementation